# forex-ai-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: 001_init_schema.sql
scripts/: backfill_prices.py  bootstrap_price_cache.py  bootstrap_prices.py  seed_knowledge_base.py  service.sh
src/: logging_config.py  main.py  models.py
src/agents/: base_agent.py  bear_researcher.py  bull_researcher.py  correlation.py  correlation_math.py  evidence.py  geopolitical.py  indicators.py  llm_client.py  macro.py  portfolio_manager.py  risk_manager.py  risk_models.py  risk_rules_engine.py  sentiment.py  sentiment_models.py  technical.py
src/agents/prompts/: debate.py  macro.py  sentiment.py
src/brain/: embeddings.py  knowledge_base.py  patterns.py  query_engine.py
src/config/: __init__.py  instruments.py  risk_rules.py  sessions.py  settings.py
src/data/ingestion/: calendar_feed.py  candle_aggregator.py  central_bank_feed.py  cot_feed.py  fred_feed.py  intermarket_feed.py  market_feed.py  news_feed.py  oil_commodity_feed.py  price_feed.py
src/data/storage/: cache.py  database.py  timeseries.py
src/execution/: broker_api.py  telegram_bot.py  trade_logger.py
src/monitoring/: dashboard.py  health.py
src/orchestration/: debate.py  market_state_builder.py
tests/unit/: test_brain.py  test_config.py  test_correlation.py  test_data.py  test_debate.py  test_macro.py  test_portfolio_manager.py  test_risk_manager.py  test_sentiment.py  test_technical.py
