[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forex-ai-agent"
version = "0.1.0"
description = "Multi-agent AI system for forex day-trading signals"
requires-python = ">=3.12"
authors = [{ name = "Sam" }]

dependencies = [
    # Core
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    # Async
    "asyncio-mqtt>=0.16",
    "aiohttp>=3.9,<4",
    "websockets>=12.0,<13",
    # Database
    "asyncpg>=0.29,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.13,<2",
    "pgvector>=0.3,<1",
    # Redis / Queue
    "redis[hiredis]>=5.0,<6",
    # LLM
    "anthropic>=0.34,<1",
    "langchain-anthropic>=0.2,<1",
    "langgraph>=0.2,<1",
    # Technical Analysis
    "pandas>=2.2,<3",
    "pandas-ta>=0.3.14b1",
    "numpy>=1.26,<2",
    "scipy>=1.13,<2",
    # API
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    # Telegram
    "python-telegram-bot>=21,<22",
    # Monitoring
    "prometheus-client>=0.20,<1",
    # Logging
    "structlog>=24.1,<25",
    # HTTP
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "pytest-mock>=3.14,<4",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<4",
]
backtest = [
    "vectorbt>=0.26,<1",
    "matplotlib>=3.9,<4",
    "jupyterlab>=4.2,<5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA"]
ignore = ["ANN101", "ANN102", "ANN401", "COM812"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "backtest: Backtesting tests",
    "slow: Slow-running tests",
]
